# calcio-manager

./: .gitignore  README.md  demo.tape  package-lock.json  package.json  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/api/: tauri.ts
frontend/src/components/: CareerLayout.tsx  LiveMatchPanels.tsx  Panel.tsx  TeamBanner.tsx
frontend/src/hooks/: useAsyncResource.test.ts  useAsyncResource.ts  useLiveMatchPlayback.test.ts  useLiveMatchPlayback.ts
frontend/src/screens/: CalendarScreen.tsx  GameHubScreen.tsx  LiveMatchScreen.tsx  LoadGameScreen.tsx  MainMenuScreen.tsx  NewGameWizard.tsx  SquadScreen.tsx  StandingsScreen.tsx
frontend/src/styles/: global.css
frontend/src/utils/: calendarScores.test.ts  (+7 more)
scripts/: convert_image.py  convert_player.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/data/: comuni_it.json
src-tauri/resources/data/locale/: en.toml  it.toml
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/commands/: game.rs  geography.rs  mod.rs  saves.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/engine/: calendar.rs  commentary.rs  competition.rs  comuni.rs  match_engine.rs  mod.rs  player_gen.rs  tournament.rs  weather.rs
src-tauri/src/domain/models/: competition.rs  config.rs  enums.rs  game_match.rs  game_state.rs  mod.rs  player.rs  season.rs  team.rs
src-tauri/src/domain/services/: mod.rs  new_game.rs  saves.rs  season.rs
src/calcio_manager/: __init__.py  __main__.py  app.py  i18n.py
tests/engine/: test_calendar.py  test_competition.py  test_match.py  test_player_gen.py  test_weather.py
tests/models/: test_models.py
(+43 files in other folders)
