[project]
name = "calcio-manager"
version = "0.1.0"
description = "Football management simulation game set in Italian CSI amateur 7-a-side football"
readme = "README.md"
authors = [
    { name = "Michele Broggi", email = "213027097+thesmokinator@users.noreply.github.com" }
]
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "textual>=0.80",
    "pydantic>=2.0",
]

[project.scripts]
calcio-manager = "calcio_manager.__main__:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "textual-dev>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
