[package]
name = "calcio-manager-tauri"
version = "0.1.0"
description = "Calcio Manager desktop app powered by Tauri"
authors = ["Michele Broggi"]
edition = "2024"

[lib]
name = "calcio_manager_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
